--- a/config.yaml
+++ b/config.yaml
@@ -6,5 +6,5 @@ TrackLifetime: 96 #3 days
 
 
 
-LoginUsername: 12345678@gmail.com #change this to your password
-LoginPassword: 12345678 #change this to your password
+LoginUsername: j4739331@gmail.com #change this to your password
+LoginPassword: 77889944 #change this to your password
